tests/neg-custom-args/captures/closure-result-typing.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/closure-result-typing.scala:2:30 -------------------------
2 |  val x: () -> Object = () => c // error
  |                              ^
  |                              Found:    (c : Object^{any})
  |                              Required: Object
  |
  |                              Note that capability `any` cannot flow into capture set {}.
  |
  |                              where:    any is a root capability in the type of parameter c
  |
  | longer explanation available when compiling with `-explain`
